--- a/style.css
+++ b/style.css
@@ -2,9 +2,22 @@ body {
     background-color: black;
     color: white;
     margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+a {
+    color: white;
+    text-decoration: none;
+}
+
+a:hover {
+    color:aqua;
+    cursor: pointer;
+    text-decoration-line: underline;
+}
+
 canvas {
-    position: absolute;
+    /* position: absolute; */
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
@@ -22,4 +35,45 @@ img {
     right: 0;
     top: 0;
     bottom: 0;
+}
+
+nav {
+    display: flex;
+    margin-top: 20px;
+    justify-content: space-evenly;
+    /* justify-content: center;
+    justify-items: stretch; */
+    /* width: 100%; */
+}
+
+nav a {
+    font-size: 18px;
+    font-weight: 100;
+    padding-left: 180px;
+    padding-right: 180px;
+}
+
+.mainTitle {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+    top: 0;
+    align-items: center;
+}
+
+h1 {
+    font-size: 50px;
+    letter-spacing: 20px;
+    margin: 0;
+    margin-bottom: 10px;
+    padding: 0;
+}
+
+h3 {
+    font-size: 20px;
+    letter-spacing: 10px;
+    margin: 0;
+    margin-bottom: 10px;
+    padding: 0;
 }
