--- a/style.css
+++ b/style.css
@@ -11,22 +11,24 @@ a {
 }
 
 a:hover {
-    color:aqua;
+    color: lightslategrey;
     cursor: pointer;
     text-decoration-line: underline;
 }
 
 canvas {
-    /* position: absolute; */
+    position: absolute;
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
     -ms-backface-visibility: hidden;
 }
 
-img {
-    position: absolute;
-    cursor: pointer;
+#container img {
+    /* position: absolute; */
+    /* cursor: pointer; */
+    cursor: url('files/hammer.png'), pointer;
+    width: 100%;
 }
 
 #container {
@@ -35,6 +37,7 @@ img {
     right: 0;
     top: 0;
     bottom: 0;
+    width: 100%;
 }
 
 nav {
@@ -66,7 +69,7 @@ h1 {
     font-size: 50px;
     letter-spacing: 20px;
     margin: 0;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     padding: 0;
 }
 
@@ -76,4 +79,133 @@ h3 {
     margin: 0;
     margin-bottom: 10px;
     padding: 0;
+}
+
+.heroVid {
+    display: flex;
+    border: 0.5px solid white;
+    align-items: center;
+}
+
+.content {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 0;
+    text-align: center;
+    /* border: 1px solid red; */
+    width: 100%;
+}
+
+.content p {
+    font-size: 30px;
+    font-weight: 200;
+    letter-spacing: 2px;
+    line-height: 50px;
+    padding: 100px;
+    padding-left: 200px;
+    padding-right: 200px;
+}
+
+.content-item {
+    align-items: center;
+    /* border: 1px solid red; */
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+.content-item img {
+    border: 1px solid white;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 100;
+}
+
+.content-item p {
+    width: 50%;
+    margin: 0;
+}
+
+.info {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 45px;
+}
+
+.info p {
+    font-size: 25px;
+    font-weight: 150;
+    line-height: 30px;
+    padding-top: 100px;
+    padding-left: 200px;
+    padding-right: 200px;
+}
+
+button {
+    background-color: black;
+    border: 1px solid white;
+    border-radius: 15px;
+    color: white;
+    font-size: 20px;
+    margin: 0;
+    padding: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+button:hover {
+    border: 1px solid lightslategrey;
+    color: lightslategrey;
+    cursor: pointer;
+}
+
+.hero-2 img {
+    height: 700px;
+    width: 100%;
+    margin-bottom: 50px;
+    margin-top: 50px;
+}
+
+.testimone {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    font-size: 22px;
+    padding-bottom: 50px;
+    padding-top: 50px;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
+#text {
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.foot {
+    background-color: lightslategrey;
+    padding-top: 20px;
+    width: 100%;
+}
+
+.foot p {
+    padding: 20px;
+    font-size: 12px;
+    letter-spacing: 4px;
+}
+
+.legal {
+    display: flex;
+    flex-direction: row;
+}
+
+.legal li {
+    list-style-type: none;
+    font-size: 18px;
+    line-height: 25px;
 }
