--- a/style.css
+++ b/style.css
@@ -2,8 +2,15 @@ body {
     background-color: black;
     color: white;
     margin: 0;
+    padding: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+/* .body-pageWrapper {
+    background-image: url("files/highlighter-bg.png");
+    background-repeat: no-repeat;
+    background-size: 100% 300%;
+} */
 
 a {
     color: white;
@@ -13,6 +20,7 @@ a {
 a:hover {
     color: lightslategrey;
     cursor: pointer;
+    font-weight: 500;
     text-decoration-line: underline;
 }
 
@@ -27,7 +35,7 @@ canvas {
 #container img {
     /* position: absolute; */
     /* cursor: pointer; */
-    cursor: url('files/hammer.png'), pointer;
+    cursor: url('files/statue.png'), pointer;
     width: 100%;
 }
 
@@ -56,12 +64,25 @@ nav a {
     padding-right: 180px;
 }
 
+.separator {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#left-line {
+    background-color: white;
+    border: 1px soldi red;
+    height: 10px;
+    top: 0;
+}
+
 .mainTitle {
     display: flex;
     flex-direction: column;
     margin: 0;
     padding: 0;
-    top: 0;
+    top: 10;
     align-items: center;
 }
 
@@ -83,8 +104,14 @@ h3 {
 
 .heroVid {
     display: flex;
-    border: 0.5px solid white;
     align-items: center;
+    width: 100%;
+}
+
+.heroVid-2 {
+    display: flex;
+    align-items: center;
+    width: 80%;
 }
 
 .content {
@@ -92,9 +119,11 @@ h3 {
     align-items: center;
     flex-direction: column;
     margin: 0;
+    /* padding-left: 40px;
+    padding-right: 40px; */
     text-align: center;
     /* border: 1px solid red; */
-    width: 100%;
+    /* width: 100%; */
 }
 
 .content p {
@@ -103,8 +132,8 @@ h3 {
     letter-spacing: 2px;
     line-height: 50px;
     padding: 100px;
-    padding-left: 200px;
-    padding-right: 200px;
+    margin-left: 200px;
+    margin-right: 200px;
 }
 
 .content-item {
@@ -113,8 +142,9 @@ h3 {
     display: flex;
     flex-direction: row;
     margin: 0;
-    padding: 0;
-    width: 100%;
+    padding-left: 80px;
+    padding-right: 80px;
+    /* width: 100%; */
 }
 
 .content-item img {
@@ -122,12 +152,12 @@ h3 {
     width: 100%;
     height: 100%;
     margin: 0px;
-    padding: 100;
 }
 
 .content-item p {
     width: 50%;
     margin: 0;
+    padding-bottom: 30px;
 }
 
 .info {
@@ -159,9 +189,10 @@ button {
 }
 
 button:hover {
-    border: 1px solid lightslategrey;
+    border: 3px solid lightslategrey;
     color: lightslategrey;
     cursor: pointer;
+    font-weight: 600;
 }
 
 .hero-2 img {
@@ -201,11 +232,56 @@ button:hover {
 
 .legal {
     display: flex;
-    flex-direction: row;
 }
 
 .legal li {
     list-style-type: none;
     font-size: 18px;
     line-height: 25px;
+}
+
+.gallery-content {
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+}
+
+.gallery-content img {
+    width: 50%;
+}
+
+.buy-tix {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.section-1 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.section-2 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.section-3 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.tag {
+    opacity: 0;
+    transition: all 1s;
+}
+
+.tag.visible {
+    opacity: 1;
 }
