--- a/style.css
+++ b/style.css
@@ -119,11 +119,13 @@ h3 {
     align-items: center;
     flex-direction: column;
     margin: 0;
-    /* padding-left: 40px;
-    padding-right: 40px; */
     text-align: center;
-    /* border: 1px solid red; */
-    /* width: 100%; */
+}
+
+.headliner {
+    margin-bottom: 70px;
+    margin-top: 70px;
+    width: 75%;
 }
 
 .content p {
@@ -131,14 +133,10 @@ h3 {
     font-weight: 200;
     letter-spacing: 2px;
     line-height: 50px;
-    padding: 100px;
-    margin-left: 200px;
-    margin-right: 200px;
 }
 
 .content-item {
     align-items: center;
-    /* border: 1px solid red; */
     display: flex;
     flex-direction: row;
     margin: 0;
@@ -155,7 +153,7 @@ h3 {
 }
 
 .content-item p {
-    width: 50%;
+    width: 70%;
     margin: 0;
     padding-bottom: 30px;
 }
@@ -207,6 +205,7 @@ button:hover {
     display: flex;
     flex-direction: column;
     font-size: 22px;
+    font-weight: 200;
     padding-bottom: 50px;
     padding-top: 50px;
     padding-left: 100px;
@@ -241,18 +240,21 @@ button:hover {
 }
 
 .gallery-content {
+    align-items: center;
+    background-color: #2c2c2c;
     display: flex;
     flex-direction: column;
+    gap: 20px;
     padding: 40px;
 }
 
 .gallery-content img {
-    width: 50%;
+    width: 100%;
 }
 
 .buy-tix {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
 }
 
